# blaupause

./: pyproject.toml
.github/workflows/: tests.yml
src/blaupause/: operations.py
tests/: test_operations.py
