[project]
name = "blaupause"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "marijanbeg", email = "m.beg@imperial.ac.uk" }
]
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
